kubernetes/deploy-frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3-tier-frontend-deploy
  labels:
    app: 3-tier-frontend-deploy
  namespace: chi-namespace
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: frontend-deploy
  template:
    metadata:
      labels:
        app: frontend-deploy
    spec:
      volumes:
        - name: config
          configMap:
            name: frontend-configmap
            items:
              - key: config.json
                path: config.json
      containers:
        - name: frontend 
          image: chi91/3tier-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/usr/share/nginx/html/configs/"
              readOnly: true
