kubernetes/backend-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  namespace: chi-namespace
spec:
  type: LoadBalancer
  ports:
    - port: 82
      targetPort: 80
  selector:
    app: backend-deploy
