kubernetes/frontend-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-frontend
  namespace: chi-namespace
spec:
  type: LoadBalancer
  ports:
    - port: 81
      targetPort: 80
  selector:
    app: frontend-deploy
