kubernetes/postgres-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels: 
    app: postgres
  namespace: chi-namespace
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
